static/css/site.css
/* ... */
.cart-product {
    display: flex;
    justify-content: start;
    width: 100%;
    flex-basis: 70%;
    margin: 10px;
}

.cart-product img {
    width: 200px;
    height: 250px;
}

.product-col:hover {
    transform: scale(1.01);
}

.remove-btn {
    margin: 20px;
    background-color: rgba(19, 45, 52, 1);
    color: white;
    border-radius: 0px;
    border: 2px solid rgba(19, 45, 52, 1);
    align-self: center;
    border-radius: 5px;
    flex-basis: 30%;

}

.remove-btn:hover {
    background-color: rgba(19, 45, 52, 1);
    color: #fff;
    border: 2px solid #fff;

}

.product-info {
    padding: 30px;
    margin-left: 20px;
    text-align: left;
}

.product-name,
.product-price,
.product-offer,
.product-quantity,
.product-quantity input[type=number] {
    margin-bottom: 10px;
    color: #000;
}

.cart-product h3 {
    font-size: 25px;
}

.cart-product h4 {
    font-weight: 400;
}

.product-quantity>input {
    width: 40px;
    padding: 5px;
    text-align: center;
}

.cart-total {
    flex: 0.25;
    padding: 20px;
    border: 1px solid silver;
    border-radius: 5px;
}

.cart-total p {
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
    font-size: 20px;
    color: #000;
}

.cart-total a {
    height: 40px;
    line-height: 40px;
    border-radius: 5px;
     background-color: rgba(19, 45, 52, 1);
    color: white;
    border-radius: 0px;
    border: 2px solid rgba(19, 45, 52, 1);
    text-decoration: none;
    font-size: 20px;
}

.cart-total a:hover {
    background-color: rgba(19, 45, 52, 1);
}

@media (max-width: 720px) {
    .product-col {
        flex-direction: column;
    }
    .product-info {
        padding: 10px;
        transform: scale(0.7);
    }
    #summary-col {
        margin-left: 0;
    }
    .remove-btn {
        width: 40%;
    }
}


/*Login*/

.login-container input[type=text],
.login-container input[type=password] {
    width: 80%;
    padding: 12px 20px;
    margin: 8px 0;
    border: 1px solid #ccc;
}

.login {
    width: 80%;
    margin: auto;
}

.login * {
    color: #000;
}

.login-btn {
    background-color: #1DA1F2;
    color: white;
    padding: 14px 20px;
    margin: 8px 30px 0 0px;
    border: none;
    width: 40%;
}

.login-container button:hover {
    opacity: 0.8;
}

.login-container {
    padding: 16px;
    width: 80%;
    margin-top: 50px;
    margin-bottom: 50px;
}


/* The "Forgot password" text */

.login-text-container {
    display: flex;
    justify-content: space-between;
    margin-bottom: 40px;
    padding: 0 20px;
}

@media (max-width:650px) {
    .login-text-container {
        flex-direction: column;
    }
    .login {
        box-sizing: border-box;
    }
}


/*Signup*/

.signup-container * {
    color: #000;
    box-sizing: border-box;
}

.message span,
.messages * {
    color: #000;
}


/* Full-width input fields */

.signup-container input[type=text],.payment-form  input[type=text],
.signup-container input[type=password] {
    width: 100%;
    padding: 15px;
    margin: 5px 0 22px 0;
    display: inline-block;
    border: none;
    background: #f1f1f1;
}

select,
#birthday {
    width: 40%;
    padding: 15px;
    margin: 5px 0 22px 0;
    display: inline-block;
    border: none;
    background: #f1f1f1;
}

#birthday {
    width: 25%;
}

input[type=text]:focus,
input[type=password]:focus,
#birthday:focus,
select:focus {
    background-color: #ddd;
    outline: none;
}

hr {
    border: 1px solid #f1f1f1;
    margin-bottom: 25px;
}


/* Set a style for all buttons */

button {
    background-color: #51c4d3;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    width: 100%;
    opacity: 0.9;
}

button:hover {
    opacity: 1;
}


/* Extra styles for the cancel button */

.cancelbtn {
    padding: 14px 20px;
    background-color: rgb(19, 45, 52);
    color: #fff;
}


/* Float cancel and signup buttons and add an equal width */

.cancelbtn,
.signupbtn {
    color: #fff;
    float: left;
    flex-basis: 35%;
}


/* Add padding to container elements */

.signup-container {
    padding: 16px;
}

.clearfix {
    width: 100%;
    margin-right: 0;
    display: flex;
    justify-content: space-around;
}


/* Change styles for cancel button and signup button on extra small screens */

@media screen and (max-width: 300px) {
    .cancelbtn,
    .signupbtn {
        width: 100%;
    }
}


/*ConfirmationPage*/

.message * {
    color: #000
}

.message-row {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 40%;
    background: linear-gradient(rgba(19, 44, 51,.9), rgba(19, 44, 51,1));
    margin: 40px auto;
   border-radius: 7px;
    text-align: center;
    
}

.confirm {
    background: linear-gradient(rgba(19, 44, 51,.9), rgba(19, 44, 51,1));
    margin-bottom: 20px;
    padding: 20px 0;
}

.confirm h3 {
    color: #fff;
}

.message-div {
    word-break: keep-all;
    
}
.message-div p{
     padding: 40px 20px;
    color: #fff;
}

.message-div a {
    background: transparent;
    color: #fff;
    margin-top: 20px ;
    margin-bottom: 30px;
    
    word-break: inherit;
}

@media (max-width: 580px) {
    .message-div a {
        padding: 12px 5px;
    }
}




/*User Information*/

.main-information-div * {
    color: #000;
}

.information {
    width: 96%;
    margin: auto;
    border-style: solid;
    border-color: #ffffff;
    background-color: #ffffff;
}

.heading1 {
    padding: 16px 24px;
    color: #ffffff;
    padding-top: 60px;
    text-align: center;
}

.userinfo-button {
    margin-top: 10px;
    background-color: transparent;
    /* blue background */
    border-radius: 5px;
    font-size: 15px;
    border-radius: 0;
    align-items: center;
    font-weight: 500;
    border: 2.1px solid rgba(19, 45, 52, 1);
    padding: 12px 36px;
    color: rgba(19, 45, 52, 1);
    transition: 0.4s;
}
.userinfo-button:hover{
    letter-spacing: 1.5px;
    color: #fff;
     border: 2.5px solid white;
    background-color: rgba(19, 45, 52, 1);
}
/* ... */

